--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 	<a href="https://plus.google.com/u/1/106598664004650183702"><img src="gplus.png" height="150", width="175">
 </div>
 <div class="contactsImg">
-	<a href="https://github.com/Smanst3r"><img src="git.png" height="150", width="175">
+	<a href="https://github.com/Smanst3r"><img src="git.svg" height="150", width="175">
 </div>
 </div>
 </div>
